First design changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
 <html>
     <head>
-        <title>Nirmal : Web Dev</title>
+        <title>scroll on animate</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
-        
-        <div class="container">
-            <h1>Nirmal : Web Dev</h1>
-        </div>
 
+        <section class="hidden">
+            <div class="container">
+                <h1 class="page-title">Web Dev<span>_</span></h1>
+                <p>Start your journey to becoming a web developer.</p>
+                <p>Let me introduce myself</p>
+                <pre>
+                    <code class="language-json">
+    {
+        'name': 'Nirmal Limbu',
+        'address': 'Canterbury, UK',
+        'date-of-birth': '1987-10-24',
+        'skills': {
+            'backend developer',
+            'system design',
+            'cloud developer'
+        }
+    }
+                    </code>
+                </pre>
+                <div id="blink-dot"></div>
+            </div>
+        </section>
+
+        <section class="hidden">
+            <div class="container">
+                <h1>Keep learning!</h1>
+                <p>London, UK</p>
+            </div>
+        </section>
+
+        <script src="./app.js"></script>
     </body>
+
 </html>
