Update page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>scroll on animate</title>
+        <title>Nirmal Limbu : Backend Engineer</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,7 +18,7 @@
                     <code class="language-json">
     {
         'name': 'Nirmal Limbu',
-        'address': 'Canterbury, UK',
+        'address': 'London, UK',
         'date-of-birth': '1987-10-24',
         'skills': {
             'backend developer',
@@ -31,6 +31,18 @@
                 <div id="blink-dot"></div>
             </div>
         </section>
+
+        <!-- <section class="hidden">
+            <div class="container">
+                <h1>What you will learn</h1>
+                <p>This section will include list of all curicullum we will cover to make you ready for the job.</p>
+                <div class="logos">
+                    <div class="logo logo-html hidden">HTML</div>
+                    <div class="logo logo-css hidden">Css</div>
+                    <div class="logo logo-js hidden">Javascript</div>
+                </div>
+            </div>
+        </section> -->
 
         <section class="hidden">
             <div class="container">
