--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <section class="hidden">
             <div class="container">
-                <h1 class="page-title">Web Dev<span>_</span></h1>
-                <p>Start your journey to becoming a web developer.</p>
+                <h1 class="page-title">Backend Engineering<span>_</span></h1>
+                <p>I help beginner web developer with how web works and to build real life projects.</p>
                 <p>Let me introduce myself</p>
                 <pre>
                     <code class="language-json">
